--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="build.css"/>
   </head>
   <body>
+    <canvas id="game" width="800" height="600"></canvas>
     <script src="build.js"></script>
   </body>
 </html>
